[gd_scene load_steps=11 format=2]

[ext_resource path="res://Objects/Player/obj_Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/FadeIn-Classic.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/tileset-1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Backgrounds/ParallaxTemplate.tscn" type="PackedScene" id=4]
[ext_resource path="res://Rooms/nivel demo final.gd" type="Script" id=5]
[ext_resource path="res://Objects/CutsceneSystem-TextHandler.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/Resource files/TextBox-Inverted-Olimac.tres" type="SpriteFrames" id=7]
[ext_resource path="res://SFX Files/TEXT 3.wav" type="AudioStream" id=8]
[ext_resource path="res://Objects/FadeOut.tscn" type="PackedScene" id=9]
[ext_resource path="res://Objects/portalSalida.tscn" type="PackedScene" id=10]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )
textWriter = NodePath("CutsceneSystem-TextHandler")
portraits = [ ExtResource( 7 ) ]
voices = [ ExtResource( 8 ) ]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FadeIn-Classic" parent="CanvasLayer" instance=ExtResource( 2 )]
visible = false
z_index = 12

[node name="Sprite" parent="CanvasLayer/FadeIn-Classic" index="0"]
animation = "blue"

[node name="FadeOut" parent="CanvasLayer" instance=ExtResource( 9 )]
visible = false

[node name="obj_Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 432, 232 )

[node name="AnimatedSprite" parent="obj_Player" index="1"]
frame = 0

[node name="Camera2D" parent="obj_Player" index="3"]
limit_left = 0
limit_top = 0
limit_right = 864
limit_bottom = 480

[node name="TileMap" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( -65537, 2, 1, -131072, 2, 65536, -131071, 2, 65536, -131070, 2, 65536, -131069, 2, 65536, -131068, 2, 65536, -131067, 2, 65536, -131066, 2, 65536, -131065, 2, 65536, -131064, 2, 65536, -131063, 2, 65536, -131062, 2, 65536, -131061, 2, 65536, -131060, 2, 65536, -131059, 2, 65536, -131058, 2, 65536, -131057, 2, 65536, -131056, 2, 65536, -131055, 2, 65536, -131054, 2, 65536, -131053, 2, 65536, -131052, 2, 65536, -131051, 2, 65536, -131050, 2, 65536, -131049, 2, 65536, -131048, 2, 65536, -131047, 2, 65536, -131046, 2, 65536, -131045, 2, 2, -1, 2, 131073, -65536, 2, 196619, -65535, 2, 196619, -65534, 2, 196619, -65533, 2, 196619, -65532, 2, 196619, -65531, 2, 196619, -65530, 2, 196619, -65529, 2, 196619, -65528, 2, 196619, -65527, 2, 196619, -65526, 2, 196619, -65525, 2, 196619, -65524, 2, 196619, -65523, 2, 196619, -65522, 2, 196619, -65521, 2, 196619, -65520, 2, 196619, -65519, 2, 196619, -65518, 2, 196619, -65517, 2, 196619, -65516, 2, 196619, -65515, 2, 196619, -65514, 2, 196619, -65513, 2, 196619, -65512, 2, 196619, -65511, 2, 196619, -65510, 2, 196619, -65509, 2, 131074, 65535, 2, 131073, 0, 2, 3, 1, 2, 131072, 2, 2, 131072, 3, 2, 131072, 4, 2, 131072, 5, 2, 131072, 6, 2, 131072, 7, 2, 131072, 8, 2, 131072, 9, 2, 131072, 10, 2, 131072, 11, 2, 131072, 12, 2, 131072, 13, 2, 131072, 14, 2, 131072, 15, 2, 131072, 16, 2, 131072, 17, 2, 131072, 18, 2, 131072, 19, 2, 131072, 20, 2, 131072, 21, 2, 131072, 22, 2, 131072, 23, 2, 131072, 24, 2, 131072, 25, 2, 4, 26, 2, 196619, 27, 2, 131074, 131071, 2, 131073, 65536, 2, 131074, 65561, 2, 131073, 65562, 2, 196619, 65563, 2, 131074, 196607, 2, 131073, 131072, 2, 131074, 131097, 2, 131073, 131098, 2, 196619, 131099, 2, 131074, 262143, 2, 131073, 196608, 2, 131074, 196633, 2, 131073, 196634, 2, 196619, 196635, 2, 131074, 327679, 2, 131073, 262144, 2, 131074, 262169, 2, 131073, 262170, 1, 196619, 262171, 2, 131074, 393215, 2, 131073, 327680, 2, 131074, 327705, 1, 131073, 327706, 1, 196619, 327707, 1, 131074, 458751, 2, 131073, 393216, 2, 131074, 393241, 1, 65537, 393242, 1, 131072, 393243, 1, 65538, 393244, 1, 1, 393245, 1, 1, 393246, 1, 1, 393247, 1, 1, 393248, 1, 1, 393249, 1, 1, 393250, 1, 1, 524287, 2, 131073, 458752, 2, 131074, 458786, 1, 1, 589823, 2, 131073, 524288, 2, 131074, 524322, 1, 1, 655359, 2, 131073, 589824, 2, 131074, 589858, 1, 1, 720895, 2, 131073, 655360, 2, 131074, 655378, 2, 1, 655379, 2, 65536, 655380, 1, 65536, 655381, 2, 65536, 655382, 2, 65536, 655383, 1, 65536, 655384, 1, 65536, 655385, 1, 65536, 655386, 1, 65536, 655387, 1, 65536, 655388, 1, 1, 655389, 1, 1, 655390, 1, 1, 655391, 1, 1, 655392, 1, 1, 655393, 1, 1, 655394, 1, 1, 786431, 2, 131073, 720896, 2, 65539, 720897, 2, 65536, 720898, 2, 65536, 720899, 2, 65536, 720900, 2, 65536, 720901, 2, 65536, 720902, 2, 65536, 720903, 2, 65536, 720904, 2, 65536, 720905, 2, 65536, 720906, 2, 65536, 720907, 2, 65536, 720908, 2, 65536, 720909, 2, 65536, 720910, 2, 65536, 720911, 2, 65536, 720912, 2, 65536, 720913, 2, 65536, 720914, 2, 65540, 720915, 2, 196619, 720916, 2, 196619, 720917, 2, 196619, 720918, 2, 196619, 720919, 1, 196619, 720920, 2, 196619, 720921, 1, 196619, 720922, 1, 196619, 720923, 2, 131074, 720924, 1, 1, 720925, 1, 1, 851967, 2, 131073, 786432, 2, 196619, 786433, 2, 196619, 786434, 2, 196619, 786435, 2, 196619, 786436, 2, 196619, 786437, 2, 196619, 786438, 2, 196619, 786439, 2, 196619, 786440, 2, 196619, 786441, 2, 196619, 786442, 2, 196619, 786443, 2, 196619, 786444, 2, 196619, 786445, 2, 196619, 786446, 2, 196619, 786447, 2, 196619, 786448, 2, 196619, 786449, 2, 196619, 786450, 2, 196619, 786451, 2, 196619, 786452, 2, 196619, 786453, 2, 196619, 786454, 2, 196619, 786455, 2, 196619, 786456, 1, 196619, 786457, 2, 196619, 786458, 2, 196619, 786459, 2, 131074, 917503, 2, 131073, 851968, 2, 196619, 851969, 2, 196619, 851970, 2, 196619, 851971, 2, 196619, 851972, 2, 196619, 851973, 2, 196619, 851974, 2, 196619, 851975, 2, 196619, 851976, 2, 196619, 851977, 2, 196619, 851978, 2, 196619, 851979, 2, 196619, 851980, 2, 196619, 851981, 2, 196619, 851982, 2, 196619, 851983, 2, 196619, 851984, 2, 196619, 851985, 2, 196619, 851986, 2, 196619, 851987, 2, 196619, 851988, 2, 196619, 851989, 2, 196619, 851990, 2, 196619, 851991, 2, 196619, 851992, 2, 196619, 851993, 2, 196619, 851994, 2, 196619, 851995, 2, 131074, 983039, 2, 131073, 917504, 2, 196619, 917505, 2, 196619, 917506, 2, 196619, 917507, 2, 196619, 917508, 2, 196619, 917509, 2, 196619, 917510, 2, 196619, 917511, 2, 196619, 917512, 2, 196619, 917513, 2, 196619, 917514, 2, 196619, 917515, 2, 196619, 917516, 2, 196619, 917517, 2, 196619, 917518, 2, 196619, 917519, 2, 196619, 917520, 2, 196619, 917521, 2, 196619, 917522, 2, 196619, 917523, 2, 196619, 917524, 2, 196619, 917525, 2, 196619, 917526, 2, 196619, 917527, 2, 196619, 917528, 2, 196619, 917529, 2, 196619, 917530, 2, 196619, 917531, 2, 131074, 1048575, 2, 65537, 983040, 2, 131072, 983041, 2, 131072, 983042, 2, 131072, 983043, 2, 131072, 983044, 2, 131072, 983045, 2, 131072, 983046, 2, 131072, 983047, 2, 131072, 983048, 2, 131072, 983049, 2, 131072, 983050, 2, 131072, 983051, 2, 131072, 983052, 2, 131072, 983053, 2, 131072, 983054, 2, 131072, 983055, 2, 131072, 983056, 2, 131072, 983057, 2, 131072, 983058, 2, 131072, 983059, 2, 131072, 983060, 2, 131072, 983061, 2, 131072, 983062, 2, 131072, 983063, 2, 131072, 983064, 2, 131072, 983065, 2, 131072, 983066, 2, 131072, 983067, 2, 65538 )

[node name="Background" parent="." instance=ExtResource( 4 )]

[node name="CutsceneSystem-TextHandler" parent="." instance=ExtResource( 6 )]
position = Vector2( 32, 24 )

[node name="portalSalida" parent="." instance=ExtResource( 10 )]
position = Vector2( 928, 272 )
scale = Vector2( 2, 3 )
roomGoto = "res://Rooms/anotherScene.tscn"
fadeOut = NodePath("../CanvasLayer/FadeOut")

[editable path="CanvasLayer/FadeIn-Classic"]

[editable path="obj_Player"]
